# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ([2.65])
#AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_INIT(demo,1.0)
AM_INIT_AUTOMAKE(demo,1.0)
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
#AC_PROG_LIBTOOL

#pkg_modules="gtk+-2.0 >= 2.0.0"
#PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
#AC_SUBST(PACKAGE_CFLAGS)
#AC_SUBST(PACKAGE_LIBS)


#GETTEXT_PACKAGE=demo
#AC_SUBST(GETTEXT_PACKAGE)
#AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])



# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_rwlock_init])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/ioctl.h unistd.h gtk/gtk.h pthread.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT([Makefile])

